Fix frontend backend-url env fallbacks and subdomain defaults

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -27,16 +27,16 @@ COOKIE_SECRET=dev-only-secret-change-in-production-32chars
 # =============================================================================
 
 # Storefront URLs (comma-separated, no trailing slashes)
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
+STORE_CORS=http://localhost:8000,http://localhost:3000,https://freeblackmarket.com,https://docs.medusajs.com
 
 # Admin Panel URLs
-ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
+ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://admin.freeblackmarket.com,https://docs.medusajs.com
 
 # Vendor Panel URLs
-VENDOR_CORS=http://localhost:7000,https://docs.medusajs.com
+VENDOR_CORS=http://localhost:7000,http://localhost:7001,https://vendor.freeblackmarket.com,https://docs.medusajs.com
 
 # Authentication URLs (usually includes all frontends)
-AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:9000,https://docs.medusajs.com
+AUTH_CORS=http://localhost:5173,http://localhost:7000,http://localhost:7001,http://localhost:9000,https://freeblackmarket.com,https://admin.freeblackmarket.com,https://vendor.freeblackmarket.com,https://docs.medusajs.com
 
 # Vendor Panel URL (auto-added to STORE_CORS if set)
 # VENDOR_PANEL_URL=https://vendor.freeblackmarket.com
