--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -1,4 +1,6 @@
 MEDUSA_BACKEND_URL=
+# Backwards-compatible fallback used by some launchers/proxies
+NEXT_PUBLIC_MEDUSA_BACKEND_URL=
 NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=
 NEXT_PUBLIC_BASE_URL=
 NEXT_PUBLIC_DEFAULT_REGION=pl
@@ -12,4 +14,4 @@ NEXT_PUBLIC_SITE_DESCRIPTION="Black Market Coalition"
 # Algolia search credentials (required for storefront search + filters)
 NEXT_PUBLIC_ALGOLIA_ID=your_algolia_app_id
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=your_algolia_search_key
-NEXT_PUBLIC_VENDOR_URL=https://vendor.mercurjs.com
+NEXT_PUBLIC_VENDOR_URL=https://vendor.freeblackmarket.com
