--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,6 +153,15 @@ jobs:
         env:
           NODE_ENV: test
 
+      - name: Upload backend coverage artifacts (optional reporting)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-coverage
+          path: backend/coverage
+          if-no-files-found: warn
+          retention-days: 14
+
   build:
     name: Build
     runs-on: ubuntu-latest
