--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, 'release/**']
   pull_request:
-    branches: [main, develop]
+    branches: [main, develop, 'release/**']
 
 env:
   NODE_VERSION: '20'
@@ -308,6 +308,46 @@ jobs:
           REDIS_URL: redis://localhost:6379
           JWT_SECRET: test-jwt-secret-at-least-32-characters-long
           COOKIE_SECRET: test-cookie-secret-at-least-32-chars
+
+  release-validation:
+    name: Release Validation Gate
+    runs-on: ubuntu-latest
+    needs: [lint, i18n-contracts, vendor-panel, test-unit, security]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release/')
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Run release validation script (blocking)
+        env:
+          BACKEND_URL: ${{ secrets.BACKEND_URL }}
+          STORE_TOKEN: ${{ secrets.STORE_TOKEN }}
+          VENDOR_TOKEN: ${{ secrets.VENDOR_TOKEN }}
+          ADMIN_TOKEN: ${{ secrets.ADMIN_TOKEN }}
+          INTEGRATION_ENDPOINTS: ${{ vars.INTEGRATION_ENDPOINTS }}
+        run: |
+          set -euo pipefail
+          mkdir -p release-validation
+          ./scripts/release_validation.sh |& tee release-validation/release-validation.log
+
+      - name: Upload release validation artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-validation-${{ github.run_id }}
+          path: release-validation/release-validation.log
+          if-no-files-found: warn
+          retention-days: 30
 
   notify-deploy:
     name: Deployment Ready
