--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         working-directory: storefront
         run: pnpm install --frozen-lockfile
 
+      - name: Check vendor/module completeness
+        run: pnpm check:vendor-completeness
+
       - name: Lint storefront
         working-directory: storefront
         run: pnpm lint
