--- a/vendor-panel/package.json
+++ b/vendor-panel/package.json
@@ -110,6 +110,7 @@
     "@vitejs/plugin-react": "4.2.1",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.17",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
